@@ -1,4 +1,6 @@
 Verion 0.9.45dev (?? ??? 2004)
+  - Converting viewt.php over to new style system & fixing a couple odd
+  rendering issues
   - Converting day.php over to new style system (particularly the header)
   - Making code in activity log easier to read both before & after rendering
   - Disallow includes from being called directly
